# SapiensOntoCellMap

./: .gitignore  README.md  SapiensOntoCellMap_documentation.docx  cns_publication.md  features_update.md  pyproject.toml  requirements-dev.txt  requirements.txt
benchmarking/: README.md  benchmark_pbmc3k.py  benchmark_tabula_sapiens.py  comparison_figure.py  download_datasets.py  run_all_benchmarks.py  run_sapiensonto.py
benchmarking/annotation_tool_exec/: base_runner.py  celltypist_runner.py  sapiensonto_runner.py  sctype_runner.py  singler_runner.py
benchmarking/download/datasets/: base_dataset_downloader.py  pbmc3k_downloader.py  tabula_sapiens_downloader.py
benchmarking/download/tools/: tool_installer.py
benchmarking/figures/: benchmark_figures.py
benchmarking/ground_truth/: pbmc3k_gt.py  tabula_sapiens_gt.py
benchmarking/metrics/: benchmark_metrics.py
benchmarking/r_scripts/: run_sctype.R  run_singler.R
benchmarking/results/: benchmark_results.csv  benchmark_summary.txt  celltypist_results.csv
config/: config.py
data/pre_manually_downloaded_files/: GSE130973_2020_sc_skin_Cell_anno_V2_marker_genes.csv  GSE138669_2018_JID_sc_skin_Cell_anno_V2_marker_genes.csv  GSE163973_2021_NC_sc_keloid_Cell_anno_V2_marker_genes.csv  Table_S3_MERFISHClusterMarkers.xlsx  mmc2.xlsx  wimms_signature.csv
data/raw/: human-view.tsv
docs/: BENCHMARKING.md  DATABASES.md  STATISTICAL_METHODS.md  generate_architecture_diagram.py  index.html
pre_manually_downloaded_files/: GSE156326_2021_NC_sc_hyper_Cell_anno_V2_marker_genes.csv
scripts/: build_marker_db.py  generate_architecture_v2.py
src/cluster_annotation/: get_cluster_annotation.py  get_html_report.py  get_marker_enrichment_test.py  hierarchical_annotation.py
src/db_manager/: database_creator.py  database_validator.py
src/deconvolution/: __init__.py  get_deconvolution.py  nnls_deconvolver.py  signature_builder.py
src/download/: bio_database_downloader.py
src/parser/: base_parser.py  cell_ontology_parser.py  cellmarker_parser.py  cellmarkerdb_parser.py  cellxgene_parser.py  database_file_parser.py  generic_parser.py  hubmap_parser.py  human_scc_cell_2020_parser.py  ontology_utils.py  panglaodb_parser.py  skin_atlas_parser.py  uberon_parser.py  wimms_parser.py
src/parser/.ipynb_checkpoints/: bio_database_parser-checkpoint.py
src/spatial_annotation/: get_html_report.py  get_marker_enrichment_per_cluster.py  get_marker_enrichment_test.py  get_spatial_cluster_annotation.py
src/visualization/: db_process.py  visualizer_template.html
test/: test_classes.py  test_download.py
test/.ipynb_checkpoints/: test_classes-checkpoint.py
tests/: test_anatomy_sex_correctness.py
